# containers

./: .clang-format  CMakeLists.txt  README.md  azure-pipelines.yml  cppcheck.sh
benchmark/: CMakeLists.txt  ImmutableMapBench.cpp  SharedQueueBench.cpp
cmake/: CodeCoverage.cmake  CompileTests.cmake  CompilerWarnings.cmake  Sanitizers.cmake
include/compiler/: builtin.hpp
include/containers/: FastLinkedList.hpp  FastLinkedList.tcc  ImmutableMap.hpp
include/creators/: InterfaceSingletonHolder.hpp
include/math/: CommonTypes.hpp  Distance.hpp  Duration.hpp  Speed.hpp
src/: CMakeLists.txt  InterfaceSingletonHolder.hpp  SharedQueue.hpp  Vector2D.hpp
src/bench/: CMakeLists.txt  SharedQueueBench.cpp
src/benchmark/: SharedQueueBench.cpp
src/containers/: SharedQueue.hpp  SharedQueue.tcc  Vector2D.hpp
src/creators/: InterfaceSingletonHolder.hpp
src/network/: CMakeLists.txt  TcpConnection.cpp  TcpConnection.hpp
src/test/: CMakeLists.txt  InterfaceSingletonHolderTest.cpp  SharedQueueTest.cpp  Vector2DTest.cpp
src/test/network/: CMakeLists.txt  TcpConnectionTest.cpp
test/: CMakeLists.txt  DistanceTest.cpp  DurationTest.cpp  FastLinkedListTest.cpp  ImmutableMapTest.cpp  InterfaceSingletonHolderTest.cpp  SharedQueueTest.cpp  SpeedTest.cpp  Vector2DTest.cpp
